--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -114,7 +114,7 @@
     <Grid>
         <TextBlock
             Text="{Binding ProfileName}"
-            Height="24" HorizontalAlignment="Left" Margin="12,12,0,0" VerticalAlignment="Top" Width="131" FontWeight="Bold" FontSize="16" TextAlignment="Center" />
+            Height="24" HorizontalAlignment="Left" Margin="5,12,0,0" VerticalAlignment="Top" Width="138" FontWeight="Bold" FontSize="14" TextAlignment="Center" TextTrimming="CharacterEllipsis" />
         <!--<TextBlock Height="21" HorizontalAlignment="Left" Margin="12,12,0,0" Text="Preset:" VerticalAlignment="Top" Width="52" FontWeight="Bold" FontSize="14" />-->
         <!--<TextBox Height="23" HorizontalAlignment="Left" Margin="70,12,0,0" VerticalAlignment="Top" Width="123" Name="presetBox"
             Style="{StaticResource ReadOnlyBox}"
